--- a/AngryBirdsGame.htm
+++ b/AngryBirdsGame.htm
@@ -1,33 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<title>Angry Birds</title>
-		<style>
-			html,body{background-color:black;height:100%;padding:0;margin:0;overflow:hidden;touch-action:none;-webkit-user-select:none;-moz-user-select:none;user-select:none;-webkit-tap-highlight-color:transparent}
-			#content{position:fixed;height:100%;width:100%;margin:0;padding:0;z-index:99}
-			.pleasewait{position:fixed;width:64px;height:64px;left:0;right:0;top:0;bottom:0;margin:auto auto;border:0;z-index:9}
-			.lds-spinner{color:white;display:inline-block;position:relative;width:64px;height:64px}
-			.lds-spinner div{transform-origin:32px 32px;animation:lds-spinner 1.2s linear infinite}
-			.lds-spinner div:after{content:" ";display:block;position:absolute;top:3px;left:29px;width:5px;height:14px;border-radius:20%;background:white}
-			.lds-spinner div:nth-child(1){transform:rotate(0deg);animation-delay:-1.1s}
-			.lds-spinner div:nth-child(2){transform:rotate(30deg);animation-delay:-1s}
-			.lds-spinner div:nth-child(3){transform:rotate(60deg);animation-delay:-0.9s}
-			.lds-spinner div:nth-child(4){transform:rotate(90deg);animation-delay:-0.8s}
-			.lds-spinner div:nth-child(5){transform:rotate(120deg);animation-delay:-0.7s}
-			.lds-spinner div:nth-child(6){transform:rotate(150deg);animation-delay:-0.6s}
-			.lds-spinner div:nth-child(7){transform:rotate(180deg);animation-delay:-0.5s}
-			.lds-spinner div:nth-child(8){transform:rotate(210deg);animation-delay:-0.4s}
-			.lds-spinner div:nth-child(9){transform:rotate(240deg);animation-delay:-0.3s}
-			.lds-spinner div:nth-child(10){transform:rotate(270deg);animation-delay:-0.2s}
-			.lds-spinner div:nth-child(11){transform:rotate(300deg);animation-delay:-0.1s}
-			.lds-spinner div:nth-child(12){transform:rotate(330deg);animation-delay:0s}
-			@keyframes lds-spinner{0%{opacity:1}100%{opacity:0}}
-		</style>
-	</head>
-	<body>
-		<div class="pleasewait" id="loading"><div class="lds-spinner"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div></div>
-		<div id="content" oncontextmenu="return false;"></div>
-		<script src="AngryBirdsGame.js"></script>
-	</body>
+  <head>
+    <meta charset="UTF-8">
+    <title>Angry Birds – Mesopotamia Edition</title>
+    <style>
+      html, body {
+        background-color: black;
+        height: 100%;
+        padding: 0;
+        margin: 0;
+        overflow: hidden;
+        touch-action: none;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        user-select: none;
+        -webkit-tap-highlight-color: transparent;
+      }
+      #content {
+        position: fixed;
+        height: 100%;
+        width: 100%;
+        margin: 0;
+        padding: 0;
+        z-index: 99;
+      }
+      .pleasewait {
+        position: fixed;
+        width: 64px;
+        height: 64px;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        margin: auto auto;
+        border: 0;
+        z-index: 9;
+      }
+      .lds-spinner {
+        color: white;
+        display: inline-block;
+        position: relative;
+        width: 64px;
+        height: 64px;
+      }
+      .lds-spinner div {
+        transform-origin: 32px 32px;
+        animation: lds-spinner 1.2s linear infinite;
+      }
+      .lds-spinner div:after {
+        content: " ";
+        display: block;
+        position: absolute;
+        top: 3px;
+        left: 29px;
+        width: 5px;
+        height: 14px;
+        border-radius: 20%;
+        background: white;
+      }
+      .lds-spinner div:nth-child(1)  { transform: rotate(0deg);   animation-delay: -1.1s; }
+      .lds-spinner div:nth-child(2)  { transform: rotate(30deg);  animation-delay: -1.0s; }
+      .lds-spinner div:nth-child(3)  { transform: rotate(60deg);  animation-delay: -0.9s; }
+      .lds-spinner div:nth-child(4)  { transform: rotate(90deg);  animation-delay: -0.8s; }
+      .lds-spinner div:nth-child(5)  { transform: rotate(120deg); animation-delay: -0.7s; }
+      .lds-spinner div:nth-child(6)  { transform: rotate(150deg); animation-delay: -0.6s; }
+      .lds-spinner div:nth-child(7)  { transform: rotate(180deg); animation-delay: -0.5s; }
+      .lds-spinner div:nth-child(8)  { transform: rotate(210deg); animation-delay: -0.4s; }
+      .lds-spinner div:nth-child(9)  { transform: rotate(240deg); animation-delay: -0.3s; }
+      .lds-spinner div:nth-child(10) { transform: rotate(270deg); animation-delay: -0.2s; }
+      .lds-spinner div:nth-child(11) { transform: rotate(300deg); animation-delay: -0.1s; }
+      .lds-spinner div:nth-child(12) { transform: rotate(330deg); animation-delay:  0s; }
+
+      @keyframes lds-spinner {
+        0%   { opacity: 1; }
+        100% { opacity: 0; }
+      }
+    </style>
+  </head>
+  <body>
+    <!-- Loading spinner while the game initializes -->
+    <div class="pleasewait" id="loading">
+      <div class="lds-spinner">
+        <div></div><div></div><div></div><div></div><div></div><div></div>
+        <div></div><div></div><div></div><div></div><div></div><div></div>
+      </div>
+    </div>
+
+    <!-- Phaser / Angry Birds game canvas mounts into this div -->
+    <div id="content" oncontextmenu="return false;"></div>
+
+    <!-- Firebase SDKs (compat version) -->
+    <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore-compat.js"></script>
+
+    <!-- Main Angry Birds game code -->
+    <script src="AngryBirdsGame.js"></script>
+
+    <!-- Firebase leaderboard / logging helper -->
+    <script src="firebaseLeaderboard.js"></script>
+
+    <!-- Mesopotamia Lesson 2.3 quiz overlay (Assyrian & Persian empires) -->
+    <script src="MesopotamiaQuiz.js"></script>
+  </body>
 </html>
